public/assets/css/main.css
/* ... */
			.wrapper.contact-wrapper form input ::-moz-focus-inner,
			.wrapper.contact-wrapper button ::-moz-focus-inner,
			.wrapper.contact-wrapper .button ::-moz-focus-inner{
				border:0;
			}

			.wrapper.contact-wrapper input[type=".wrapper.contact-wrapper button"], .wrapper.contact-wrapper input[type="submit"], .wrapper.contact-wrapper input[type="reset"], .wrapper.contact-wrapper button, .wrapper.contact-wrapper .button {
				color: rgba(40, 40, 40, .85);
				border: 2px solid rgba(40, 40, 40, .25);
			  background-color: rgba(255, 241, 210, 0.75);
			  top: 1px;
			}

			.wrapper.contact-wrapper input[type=".wrapper.contact-wrapper button"]:hover, .wrapper.contact-wrapper input[type="submit"]:hover, .wrapper.contact-wrapper input[type="reset"]:hover, .wrapper.contact-wrapper button:hover, .wrapper.contact-wrapper .button:hover {
			  background-color: rgba(40, 40, 40, .85) !important;
			  color: rgba(200,200,220, 1) !important;
			}
/* Nav */

	#nav {
		background-color: rgba(20, 20, 20, 0.85);
		background: -webkit-linear-gradient(left top, rgba(20, 20, 20, 0.75), rgba(20, 20, 20, 1));
		background: -o-linear-gradient(bottom right, rgba(20, 20, 20, 0.75), rgba(20, 20, 20, 1));
		background: -moz-linear-gradient(bottom right, rgba(20, 20, 20, 0.75), rgba(20, 20, 20, 1));
		background: linear-gradient(to bottom right, rgba(20, 20, 20, 0.75), rgba(20, 20, 20, 1));
		box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
		text-align: right;
		position: fixed;
		left: 0;
		top: 0;
		width: 100%;
		z-index: 100;
		cursor: default;
	}

		#nav ul {
			margin-bottom: 0;
			padding-right: 1em;
		}

		#nav li {
			display: inline-block;
		}

		#nav a {
			position: relative;
			display: block;
			color: #fff;
			text-decoration: none;
			outline: 0;
			text-transform: uppercase;
		}

			#nav a:hover {
				color: #fff !important;
			}

			#nav a.active:before {
				content: '';
				display: block;
				position: absolute;
				bottom: -0.6em;
				left: 50%;
				margin-left: -0.75em;
				border-left: solid 0.75em transparent;
				border-right: solid 0.75em transparent;
				border-top: solid 0.6em #282828;
			}

/* Articles */

	#home .image {
		border-radius: 50%;
	}

		#home .image img {
			border-radius: 50%;
		}

	#home h1, #home p, #home h1 a , #home p a, #home strong {
		color: #fff;
		text-shadow: 0px 0px 8px #000;
	}

/* Copyright */

	#copyright {
		color: #666;
	}

		#copyright a {
			-moz-transition: color .2s ease-in-out;
			-webkit-transition: color .2s ease-in-out;
			-ms-transition: color .2s ease-in-out;
			transition: color .2s ease-in-out;
			color: inherit;
		}

			#copyright a:hover {
				color: #777;
			}

/*Portfolio*/
/*Project*/

figure.project * {
	-webkit-transition: all 0.35s ease-in-out;
	transition: all 0.35s ease-in-out;
}

figure.project {
	position: relative;
	background-color: #000000;
	-webkit-margin-before: 0;
	-webkit-margin-after: 0;
	-webkit-margin-start: 0px;
	-webkit-margin-end: 0px;
/*-webkit-transform: rotate(0);
-moz-transform: rotate(0);
transform: rotate(0);*/
}

figure.project img {
	opacity: 0.25;
	width: 100%;
	height: auto;
	max-width: 100%;
	position: relative;
	top: 0;
	left: 0;
}

figure.project figcaption {
	position: absolute;
	top: calc(50% - 1.5em);
	left: 30px;
	right: 30px;
}


figure.project label {
	display: inline-block;;
	max-width: 100%;
	font-size: 1.5em;
	margin: .5em 0;
	font-weight: bold;
	color: white;
	text-align: center;
}

figure.project:hover figcaption{
	-webkit-transform: rotate(-50deg) translateY(-50%) scale(0.9);
	transform: rotate(-50deg) translateY(-50%) scale(0.9);
}

figure.project:hover label{
	color: #43bff0;
}

figure.project figcaption:before,figure.project figcaption:after {
	background-color: rgba(255,255,255,0.8);
	width: 100%;
	height: 2px;
	position: absolute;
	content: "";
	display: block;
	-webkit-transition: all 0.35s ease-in-out;
	transition: all 0.35s ease-in-out;
}

figure.project figcaption:before {
	left: 0;
	top: 0;
}

figure.project figcaption:after {
	bottom: 0;
	right: 0;
}

figure.project:hover img,figure.project.hover img {
	opacity: 1;
	-webkit-backface-visibility: hidden;  /* fix for Chrome opacity pixel-shift bug */
/*
	-webkit-transform: rotate(0);
	-moz-transform: rotate(0);
	transform: rotate(0);
*/
}

figure.project:hover figcaption:before,figure.project.hover figcaption:before,figure.project:hover figcaption:after,figure.project.hover figcaption:after {
	width: 120%;
	background-color: #43bff0;
}


/*Project Modal*/
/* The Modal (background) */
.modal {
  position: fixed; /* Stay in place */
  z-index: 200; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  text-shadow: 1px 1px 0px rgba(127, 127, 127, .25);
}
/* Modal Content */
.modal-content {
	position: relative;
	z-index: 201;
	font-size: 1.5em;
	background-color: #fefefe;
	margin: 40px auto 0;
	border: 1px solid #444444;
	width: 80%;
	max-width:960px;
	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.1);
	-webkit-animation-name: animatetop;
	-webkit-animation-duration: 0.4s;
	animation-name: animatetop;
	animation-duration: 0.4s;
}

.modal-content strong{
	color: #43B3E0;
}

/*animation for closure of modal to mirror modal opening*/
.modal-out {
  position: relative;
  z-index: 201;
  background-color: #fefefe;
  margin: 15% auto;
  border: 1px solid #444444;
  width: 80%;
  max-width:960px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.1);
  -webkit-animation-name: animateout;
  -webkit-animation-duration: 0.4s;
  animation-name: animateout;
  animation-duration: 0.4s
}

/* Modal Header */
.modal-header {
  padding: 2px 16px;
  background-color: #000000;
}
.modal-header h2, .modal-header h3{
	color: #43B3E0;
	margin: 24px 0em;
}
/* ... */

